Bug 22908 - Invalid output of radial gradient
Summary: Invalid output of radial gradient
Status: RESOLVED FIXED
Alias: None
Product: pixman
Classification: Unclassified
Component: pixman (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-23 05:48 UTC by Carlos Garcia Campos
Modified: 2009-07-23 13:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Test case (2.93 KB, text/x-csrc)
2009-07-23 05:48 UTC, Carlos Garcia Campos
Details
Screenshot (42.86 KB, image/png)
2009-07-23 05:49 UTC, Carlos Garcia Campos
Details

Description Carlos Garcia Campos 2009-07-23 05:48:50 UTC
Created attachment 27947 [details]
Test case

While trying to implement radial gradients in poppler cairo backend, I noticed that the cairo code used to generate the pdf file doesn't provide the same output using an image surface. 

The attached file is a modified version of the original code (by adrianj) to generate both pdf and png outputs. I'll attach a screenshot too.
Comment 1 Carlos Garcia Campos 2009-07-23 05:49:45 UTC
Created attachment 27948 [details]
Screenshot
Comment 2 Chris Wilson 2009-07-23 11:12:24 UTC
commit 20d2df03059d6a5941464d80e81e8116ebf4dbfe
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jul 23 19:08:40 2009 +0100

    Fix inversion of radial gradients when r2 > r1
    
    Fixes: Bug 22908 -- Invalid output of radial gradient
    http://bugs.freedesktop.org/show_bug.cgi?id=22908
    
    We also include a modified patch by André Tupinambá <andrelrt@gmail.com>,
    to pull constant expressions out of the inner radial gradient walker.



Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.